--- a/conversor-de-moedas/app/src/main/res/layout/activity_main.xml
+++ b/conversor-de-moedas/app/src/main/res/layout/activity_main.xml
@@ -1,43 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+   android:layout_margin="8dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView android:layout_width="wrap_content"
+    <TextView android:layout_width="match_parent"
+        android:gravity="right"
         android:layout_height="wrap_content"
         android:text="@string/valor_dolar_hoje"
      />
 
-    <EditText android:id="@+id/edit_valor_dolar_hoje"
+    <EditText
+        android:id="@+id/edit_valor_dolar_hoje"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0.00"
-     />
+        android:layout_gravity="right"
+        android:text="0.00" />
 
-    <TextView android:layout_width="wrap_content"
+    <TextView android:layout_width="match_parent"
+        android:gravity="right"
         android:layout_height="wrap_content"
         android:text="@string/valor_euro_hoje"
      />
 
     <EditText android:id="@+id/edit_valor_euro_hoje"
         android:layout_width="wrap_content"
+        android:layout_gravity="right"
         android:layout_height="wrap_content"
         android:text="0.00"
      />
 
-    <TextView android:layout_width="wrap_content"
+    <TextView android:layout_width="match_parent"
+        android:gravity="center"
         android:layout_height="wrap_content"
         android:text="@string/qual_o_valor_em_real"
+        android:textSize="25sp"
      />
 
-    <EditText android:id="@+id/edit_valor_real"
+    <EditText
+        android:id="@+id/edit_valor_real"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0.00"
-    />
+        android:layout_gravity="center"
+        android:text="0.00" />
 
     <TextView android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -66,6 +74,7 @@
         android:layout_height="wrap_content"
         android:text="CALCULAR"
         android:background="@color/colorAccent"
+        android:textColor="@color/colorLight"
     />
 
 </LinearLayout>
