--- a/conversor-de-moedas/app/src/main/res/layout/activity_main.xml
+++ b/conversor-de-moedas/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/back"
    android:layout_margin="8dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,12 +13,14 @@
         android:gravity="right"
         android:layout_height="wrap_content"
         android:text="@string/valor_dolar_hoje"
+        android:textColor="@color/colorPrimaryText"
         android:textSize="18sp"
      />
 
     <EditText
         android:id="@+id/edit_valor_dolar_hoje"
         android:layout_width="160dp"
+        android:textColor="@color/colorPrimaryText"
         android:inputType="numberSigned"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
@@ -27,11 +31,13 @@
         android:layout_marginTop="10sp"
         android:layout_height="wrap_content"
         android:text="@string/valor_euro_hoje"
+        android:textColor="@color/colorPrimaryText"
         android:textSize="18sp"
      />
 
     <EditText
         android:id="@+id/edit_valor_euro_hoje"
+        android:textColor="@color/colorPrimaryText"
         android:inputType="numberSigned"
         android:layout_width="160dp"
         android:layout_height="wrap_content"
@@ -42,6 +48,7 @@
         android:gravity="center"
         android:layout_marginTop="30dp"
         android:layout_height="wrap_content"
+        android:textColor="@color/colorPrimaryText"
         android:text="@string/qual_o_valor_em_real"
         android:textSize="25sp"
      />
@@ -52,6 +59,7 @@
         android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:textColor="@color/colorPrimaryText"
         android:text="" />
 
     <Button
@@ -59,14 +67,15 @@
         android:layout_width="match_parent"
         android:layout_marginTop="30dp"
         android:layout_height="wrap_content"
-        android:background="@color/colorAccent"
+        android:background="@color/colorPrimaryText"
         android:text="CALCULAR"
         android:textSize="20sp"
-        android:textColor="@color/colorLight" />
+        android:textColor="@color/colorPrimaryDark" />
 
     <TextView android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
+        android:textColor="@color/colorPrimaryText"
         android:text="@string/dolar_convertido"
         android:textSize="20sp"
         />
@@ -75,6 +84,7 @@
         android:layout_width="wrap_content"
         android:layout_gravity=""
         android:layout_height="wrap_content"
+        android:textColor="@color/colorPrimaryText"
         android:text="@string/valor_dolar_convertido"
         android:textSize="20sp"
         />
@@ -82,6 +92,7 @@
     <TextView android:layout_width="match_parent"
         android:layout_marginTop="10dp"
         android:layout_height="wrap_content"
+        android:textColor="@color/colorPrimaryText"
         android:text="@string/euro_convertido"
         android:textSize="20sp"
         />
@@ -90,6 +101,7 @@
         android:layout_width="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_height="wrap_content"
+        android:textColor="@color/colorPrimaryText"
         android:text="@string/valor_dolar_convertido"
         android:textSize="20sp"
         />
