--- a/conversor-de-moedas/app/src/main/res/values/colors.xml
+++ b/conversor-de-moedas/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#a6e65b</color>
+    <color name="colorPrimary">#5B79E6</color>
     <color name="colorPrimaryDark">#85bc47</color>
     <color name="colorAccent">#8BC34A</color>
     <color name="colorLight">#FFF9C4</color>
-    <color name="colorPrimaryText">#212121</color>
+    <color name="colorPrimaryText">#070707</color>
     <color name="colorSecundaryText">#757575</color>
     <color name="colorDividerText">#BDBDBD</color>
 </resources>
