--- a/festa-fim-de-ano/app/src/main/res/layout/activity_main.xml
+++ b/festa-fim-de-ano/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_below="@+id/data"
-        android:background="@color/colorAccent"
+        android:background="@color/colorPrimary"
         />
 
     <TextView
@@ -45,6 +45,7 @@
         android:text="320 dias"
         android:textSize="30sp"
         />
+
     <Button
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
