--- a/festa-fim-de-ano/app/src/main/res/layout/activity_detalhe.xml
+++ b/festa-fim-de-ano/app/src/main/res/layout/activity_detalhe.xml
@@ -29,6 +29,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:layout_gravity="center"
+        android:textSize="20sp"
         android:text="@string/voce_vai_participar"
         />
 
