--- a/frameLayout/app/src/main/res/layout/activity_main.xml
+++ b/frameLayout/app/src/main/res/layout/activity_main.xml
@@ -7,8 +7,8 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="@color/colorAccent"
         android:src="@drawable/ic_launcher_foreground" />
 </FrameLayout>
