--- a/frameLayout/app/src/main/res/layout/activity_main.xml
+++ b/frameLayout/app/src/main/res/layout/activity_main.xml
@@ -1,34 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/colorAccent"
-        android:layout_gravity="left"
-        android:src="@drawable/ic_launcher_foreground" />
+    <TableRow>
+        <TextView
+            android:text="Coluna 1"
+            android:textSize="50sp"
+            />
+        <TextView
+            android:text="Coluna 2"
+            android:textSize="50sp"
+            />
+    </TableRow>
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:background="@color/colorAccent"
-        android:src="@drawable/ic_launcher_foreground" />
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:background="@color/colorAccent"
-        android:src="@drawable/ic_launcher_foreground" />
-
-
-</LinearLayout>
+    <TableRow>
+        <TextView
+            android:text="Coluna 1"
+            android:textSize="50sp"
+            />
+        <TextView
+            android:text="Coluna 2"
+            android:textSize="50sp"
+            />
+    </TableRow>
+</TableLayout>
