--- a/frameLayout/app/src/main/res/layout/activity_main.xml
+++ b/frameLayout/app/src/main/res/layout/activity_main.xml
@@ -1,31 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:paddingBottom="ver"
     tools:context=".MainActivity">
 
-    <TableRow>
-        <TextView
-            android:text="Coluna 1"
-            android:textSize="50sp"
-            />
-        <TextView
-            android:text="Coluna 2"
-            android:textSize="50sp"
-            />
-    </TableRow>
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:background="@color/colorAccent"
+        android:src="@drawable/ic_launcher_foreground" />
 
-    <TableRow>
-        <TextView
-            android:text="Coluna 1"
-            android:textSize="50sp"
-            />
-        <TextView
-            android:text="Coluna 2"
-            android:textSize="50sp"
-            />
-    </TableRow>
-</TableLayout>
+    <TextView
+        android:id="@+id/text1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="HELLO WORLD"
+        android:textSize="50sp"
+        android:layout_below="@id/imageView1"
+    />
+
+    <TextView
+        android:id="@+id/text2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="HELLO WORLD2"
+        android:layout_below="@id/text1"
+
+        />
+
+
+</RelativeLayout>
