--- a/resolucaoExercicio1/app/src/main/res/layout/activity_main.xml
+++ b/resolucaoExercicio1/app/src/main/res/layout/activity_main.xml
@@ -89,11 +89,12 @@
         android:text="order" />
 
     <TextView
+        android:id="@+id/txt_total"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:gravity="center_horizontal"
-        android:text="Your total is $15! Thanks for buying with us."
+        android:text=""
         android:textAlignment="center" />
 
 </LinearLayout>
