--- a/cursoApp/app/src/main/res/layout/activity_unidade.xml
+++ b/cursoApp/app/src/main/res/layout/activity_unidade.xml
@@ -72,9 +72,10 @@
 <!--        />-->
 
     <ListView
-        android:background="#ffff"
         android:id="@+id/list_view_unidades"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:background="#ffff"
+        style="bold"/>
 
 </LinearLayout>
