--- a/cursoApp/app/src/main/res/layout/activity_listar_unidades.xml
+++ b/cursoApp/app/src/main/res/layout/activity_listar_unidades.xml
@@ -9,6 +9,7 @@
     <ListView
         android:id="@+id/list_view_unidades"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        />
 
 </LinearLayout>
