--- a/cursoApp/app/src/main/res/layout/layout_unidade.xml
+++ b/cursoApp/app/src/main/res/layout/layout_unidade.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#92929C">
 
     <TextView
         android:id="@+id/text_id"
-        android:text="@string/id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/colorPrimary"/>
+        android:paddingLeft="2dp"
+        android:text="@string/id"
+        android:textColor="#040300"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,42 +21,61 @@
         android:orientation="horizontal">
 
         <TextView
-            android:text="@string/nome"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:paddingLeft="3dp"
+            android:text="@string/nome"
+            android:textColor="#010B01"
+            android:textSize="15sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/text_nome"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textColor="#010B01"
+            android:textSize="15sp"
+            android:textStyle="bold" />
 
         <Space
             android:layout_width="5dp"
             android:layout_height="wrap_content" />
 
         <TextView
-            android:text="@string/endereco"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="@string/endereco"
+            android:textColor="#010B01"
+            android:textSize="15sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/text_endereco"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textColor="#010B01"
+            android:textSize="15sp"
+            android:textStyle="bold" />
 
         <Space
             android:layout_width="5dp"
             android:layout_height="wrap_content" />
 
         <TextView
-            android:text="@string/status"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="@string/status"
+            android:textColor="#010B01"
+            android:textSize="15sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/text_status"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textColor="#010B01"
+            android:textSize="15sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
