update com sucesso.

--- a/cursoApp/app/src/main/res/layout/activity_turma.xml
+++ b/cursoApp/app/src/main/res/layout/activity_turma.xml
@@ -32,7 +32,7 @@
         />
 
     <Button
-        android:id="@+id/btn_cadastrar"
+        android:id="@+id/btn_salvar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
