--- a/cursoApp/app/src/main/res/layout/activity_unidade.xml
+++ b/cursoApp/app/src/main/res/layout/activity_unidade.xml
@@ -8,6 +8,7 @@
     android:background="#000000"
     tools:context=".activities.ActivityUnidade">
 
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -18,13 +19,28 @@
         android:padding="5dp"
         android:text="Cadastro de Unidades"
         android:textSize="30sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:enabled="false"
+        />
+
+    <EditText
+        android:id="@+id/edit_id"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="30dp"
+        android:padding="10dp"
+        android:background="#FFFFFF"
+        android:hint="Id"
+        android:textColor="#090000"
+        android:enabled="false"
+        />
+
 
     <EditText
         android:id="@+id/edit_nome"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
         android:padding="10dp"
         android:background="#FFFFFF"
         android:hint="Nome"
@@ -42,12 +58,25 @@
         android:textColor="#090000"
         />
 
+    <EditText
+        android:id="@+id/edit_status"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="10dp"
+        android:padding="10dp"
+        android:background="#FFFFFF"
+        android:hint="Status"
+        android:textColor="#090000"
+        android:enabled="false"
+
+        />
+
     <Button
-        android:id="@+id/btn_cadastrar"
+        android:id="@+id/btn_salvar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:text="Cadastrar"
+        android:text="Salvar"
         android:textSize="20sp"
         android:background="#92929C"
         android:textAllCaps="false"
@@ -55,12 +84,11 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="156dp"
+        android:layout_height="90dp"
         android:layout_marginTop="20dp"
         android:src="@drawable/escola" />
 
     <ListView
-
         android:layout_marginTop="10dp"
         android:id="@+id/list_view_unidades"
         android:layout_width="match_parent"
